--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS\index.css">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: rgb(41, 40, 40);">
+
     <h1>welcome.</h1>
+    <P id="my-id">hello</P>
+    <!-- <p>web development<span> 50</p> is cool</span> -->
+    <!-- <div>some test<span>ello</span></div>
+    <span>some <div>from div</div>ok</span> -->
+    <p>&copy; &quot;</p>
+
 </body>
 </html>
